# MikuBot

./: .gitignore  .pylintrc  CMD.py  README.md  chattermiku.py  clean.py  commands.txt  db.sqlite3  live.py  main.py  pyproject.toml  replit.nix
FlaskApp/: flask.py
FlaskApp/static/: script.js
FlaskApp/templates/: main.html
cogs/: CMD.py  chattermiku.py  loaders.py  vc.py
export_import/: export.json  export.py  import_train.py
logic_adapters/: goodbye.py
modules/: chatterbot_stuff.py  paginator.py  search_db.py
