[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
replit = {git = "https://github.com/noneofyourbusiness1415252/replit-py"}
Command = "^0.1.0"
Flask = "^2.2.2"
# ChatterBot = "^1.1.0" for l8r. kills the repl.
pylint = "^2.15.4"
black = "^22.10.0"
flake8 = "^5.0.4"
toolz = "^0.12.0"
ChatterBot = "1.0.4"
gTTS = "^2.2.4"
PyNaCl = "^1.5.0"
ffmpeg = "^1.4"
pytz = "^2022.4"
nextcord = "^2.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"